--- a/src/components/molecules/UserCard/UserCard.module.css
+++ b/src/components/molecules/UserCard/UserCard.module.css
@@ -1,27 +1,33 @@
 .card {
-    width: 100%;
-    border-color: #EAEAEA;
-    border-style: solid;
-    border-width: 1px;
-    height: 84px;
-    display: grid;
-    grid-template-columns: 1.5fr 0.5fr 1.2fr 0.7fr 0.2fr;
-    align-items: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
+  width: 100%;
+  border-color: #eaeaea;
+  border-style: solid;
+  border-width: 1px;
+  height: 84px;
+  display: grid;
+  grid-template-columns: 1.3fr 0.7fr 1.2fr 0.7fr 0.2fr;
+  align-items: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
-.nameEmail, .cpfPhone {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 35px;
+.nameEmail {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 35px;
+}
+
+.cpfPhone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 p {
-    color: #666666;
+  color: #666666;
 }
 
 .boldText {
-    font-weight: 500;
+  font-weight: 500;
 }
