feat: adds empty state to user list

--- a/src/views/MainPage/MainPage.module.css
+++ b/src/views/MainPage/MainPage.module.css
@@ -18,11 +18,15 @@
     align-items: flex-start;
 }
 
-.usersContent {
+.headerContent {
     width: 100%;
     display: flex;
     align-items: center;
     margin-top: 20px;
+}
+
+.usersContent {
+    width: 100%;
 }
 
 .titleText {
